--- a/asteroids.html
+++ b/asteroids.html
@@ -6,8 +6,15 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <h1>Asteroids</h1>
+
   <div class="canvas-holder">
     <canvas width="1600" height="800"></canvas>
+  </div>
+
+  <div class="score-box">
+    <h2>Score: <span id="score"></span></h2>
+    <h2 id="game-over"></h2>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
